k8s-prod/ingress.yaml
ingress.yamlapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-log-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - incident-log.mehmoodhaq.tech
      secretName: incident-log-tls
  rules:
    - host: incident-log.mehmoodhaq.tech
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
